--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,31 +1,50 @@
 # Dependencies
 node_modules/
+.pnp
+.pnp.js
 
 # Build output
 dist/
+*.tsbuildinfo
 
 # Environment
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # IDE
 .idea/
 .vscode/
 *.swp
 *.swo
+*.sublime-project
+*.sublime-workspace
 
 # OS
 .DS_Store
 Thumbs.db
+*~
 
 # Logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Test
 coverage/
+.nyc_output/
 
 # Docker volumes (local)
 postgres_data/
 redis_data/
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
